--- a/GeoQuiz/res/values/strings.xml
+++ b/GeoQuiz/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="previous_button">Prev</string>
     <string name="cheat_button">Cheat!</string>
     <string name="show_answer_button">Show Answer</string>
-    <string name="warning_text">Are you sure?</string>
+    <string name="warning_text_view">Are you sure?</string>
     <string name="judgment_toast">Cheating is wrong.</string>
 
 </resources>
